tests/unit/evaluation/flatzinc/test_array_too_long-bad.err_exp
test_array_too_long-bad.fzn:5: error: array a has size 3, but was assigned 6.
