tests/unit/evaluation/flatzinc/test_array_too_long-bad.err_exp2
ILOG CPLEX 10.000, licensed to "nvl-australia", options: e m b q use=10 
test_array_too_long-bad.fzn:5: error: array a has size 3, but was assigned 6.
